[package]
name = "wsfeed"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ordered-float = "3.0"