[package]
name = "wsfeed"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.13"
rust_decimal = "1.28"
crc32fast = "1.3"
ordered-float = "3.0"
urlencoding = "2.1.0"